upgrade spigot to minecraft 1.17