@@ -1,2 +1,2 @@
 #!/bin/sh 
-java -Xms1G -Xmx1G -XX:+UseConcMarkSweepGC -jar spigot.jar nogui
+java -Xms1G -Xmx1G -jar spigot.jar nogui
